...
                },
                onTapDrawer: (context) {
                  drawerController.toggle();
                },
              ),
              floatingActionButton: AddMapFeatureFab(
                key: const ValueKey("homeAddMapFeatureFab"),
              ),
              body: FlutterMap(
                mapController: mapController,
                options: MapOptions(
                  initialCenter: LatLng(51.5, -0.09),
                  initialZoom: 5,
...
