...
            ],
          ),
          Positioned(
            top: 10,
            left: 10,
            child: IconButton(
              key: const ValueKey("projectsSheetIconButtonClose"),
              onPressed: () {
                Navigator.of(context).pop();
              },
              icon: const Icon(Icons.close),
            ),
          ),
...
